--- a/app/views/main.html
+++ b/app/views/main.html
@@ -10,7 +10,12 @@
         <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
         <script src="@{'/public/javascripts/jquery-1.7.1.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
         <script type="text/javascript" src="@{'/public/javascripts/jquery-ui-1.8.18.custom.min.js'}" charset="${_response_encoding}"></script>
+        <script src="@{'/public/javascripts/RGraph.common.core.js'}" type="text/javascript" charset="${_response_encoding}" ></script>
+        <script src="@{'/public/javascripts/RGraph.bar.js'}" type="text/javascript" charset="${_response_encoding}" ></script>
         #{get 'moreScripts' /}
+
+
+        </p>
     </head>
     <body>
         #{doLayout /}
