--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -19,6 +19,14 @@
 
         $(function() {
             $("#tabs").tabs();
+        })
+
+
+        var datas = new Array();
+        $('#matrix .articleTitle').each(function(i) {
+
+           datas[i] =  $(this).html();
+
         });
 
 
@@ -29,7 +37,7 @@
 
             barPlusOne.Set('chart.colors', ['red']);
             barPlusOne.Set('chart.title', 'Number of plus one by article');
-            barPlusOne.Set('chart.labels', ['${aov.titleMatrix}']);
+            barPlusOne.Set('chart.labels', datas);
             barPlusOne.Set('chart.text.angle', 90);
             barPlusOne.Draw();
 
@@ -39,7 +47,7 @@
 
             barShared.Set('chart.colors', ['red']);
             barShared.Set('chart.title', 'Number of share by article');
-            barShared.Set('chart.labels', ['${aov.titleMatrix}']);
+            barShared.Set('chart.labels', datas);
             barShared.Set('chart.text.angle', 90);
             barShared.Draw();
         });
@@ -48,12 +56,22 @@
     });
 </script>
 
+<div style="display: none;" id="matrix">
+    #{list items:aov.titleMatrix, as:'task'}
+    <div class="articleTitle"><p>${task}</p></div>
+    #{/list}
+
+
+</div>
+
+
 
 <div id="tabs">
     <ul>
         <li><a href="#tabs-1">Stats</a></li>
         <li><a href="#tabs-2">Articles</a></li>
         <li><a href="#tabs-3">Graphs</a></li>
+        <li><a href="#tabs-4">test</a></li>
 
     </ul>
     <div id="tabs-1">
@@ -78,7 +96,8 @@
 
             <div id="accordion">
                 #{list items:aov.activityWrappers, as:'task'}
-                <h3><a href="#">${task.title} by ${task.author}</a></h3>
+                <h3><a href="#">${task.title} by ${task.author} &nbsp;&nbsp;&nbsp;&nbsp; +1 :${task.nbPlusOners} &nbsp;&nbsp;&nbsp;&nbsp;
+                    Shared :${task.nbReshared} </a></h3>
 
                 <div>
                     <p>
@@ -95,10 +114,15 @@
         </p>
     </div>
     <div id="tabs-3">
-       <canvas id="plusOne" width="1000" height="500">[No canvas support]</canvas>
+
+          <canvas id="plusOne" width="1000" height="500">[No canvas support]</canvas>
+
         <br>
         <br>
         <canvas id="shared" width="1000" height="500">[No canvas support]</canvas>
+    </div>
+    <div id="tabs-4">
+
     </div>
 
 </div>
