--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -71,7 +71,7 @@
         <li><a href="#tabs-1">Stats</a></li>
         <li><a href="#tabs-2">Articles</a></li>
         <li><a href="#tabs-3">Graphs</a></li>
-        <li><a href="#tabs-4">test</a></li>
+        <!--<li><a href="#tabs-4">test</a></li>-->
 
     </ul>
     <div id="tabs-1">
@@ -121,9 +121,9 @@
         <br>
         <canvas id="shared" width="1000" height="500">[No canvas support]</canvas>
     </div>
-    <div id="tabs-4">
+    <!--<div id="tabs-4">-->
 
-    </div>
+    <!--</div>-->
 
 </div>
 
