fix html caractere issue

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -84,7 +84,7 @@
             </div>
             <div class="container sub-container bottom"><span class="text">${aov.compileSumPlusOnePage} </span>+1</div>
             <div class="container sub-container right"><span class="text">${aov.compileSumShared} </span>shared</div>
-            <div class="container sub-container "><span class="text bestArticle">${aov.bestTitrePost}</span> <span
+            <div class="container sub-container "><span class="text bestArticle"><p>${aov.bestTitrePost}</p></span> <span
                     class="text redactorbestArticle"> by ${aov.bestNamePost}</span></div>
         </div>
         </p>
