--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,19 +3,19 @@
 <html>
     <head>
         <title>#{get 'title' /}</title>
-        <meta charset="${_response_encoding}">
-        <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
-        <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/smoothness/jquery-ui-1.8.18.custom.css'}">
-        #{get 'moreStyles' /}
-        <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
-        <script src="@{'/public/javascripts/jquery-1.7.1.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
-        <script type="text/javascript" src="@{'/public/javascripts/jquery-ui-1.8.18.custom.min.js'}" charset="${_response_encoding}"></script>
-        <script src="@{'/public/javascripts/RGraph.common.core.js'}" type="text/javascript" charset="${_response_encoding}" ></script>
-        <script src="@{'/public/javascripts/RGraph.bar.js'}" type="text/javascript" charset="${_response_encoding}" ></script>
-        #{get 'moreScripts' /}
 
 
-        </p>
+
+
+
+
+        <link rel="stylesheet/less" type="text/css" href="@{'/public/stylesheets/bootstrap.less'}" />
+
+        <script src="@{'/public/javascripts/less-1.3.0.min.js'}" type="text/javascript"  ></script>
+        <script src="@{'/public/javascripts/jquery-1.7.1.min.js'}" type="text/javascript"  ></script>
+        <script src="@{'/public/javascripts/bootstrap-tab.js'}" type="text/javascript"  ></script>
+
+
     </head>
     <body>
         #{doLayout /}
