--- a/public/stylesheets/bootstrap.less
+++ b/public/stylesheets/bootstrap.less
@@ -114,8 +114,31 @@ div.dice {
     font-family: 'Readable Web Logotype';
 }
 
+
+
 div.lineH {
   padding-bottom:10px; /*Pour séparer le contenu de la bordure du bas du bloc*/
   magin-bottom:15px; /*Pour séparer la bordure du prochain élément*/
-  border-bottom: 1px solid @linkColor/*Pour faire un trait rouge horizontal*/
+  border-bottom: 1px solid @linkColor;/*Pour faire un trait rouge horizontal*/
 }
+
+.medium {
+     color: #ff6600;
+     font-size: 21px;
+
+}
+
+.large {
+     color:#cc0033 ;
+     font-size: 40px;
+
+}
+
+.small{
+  color:#0099cc ;
+ font-size: 15px;
+
+}
+
+
+
