--- a/app/views/Application/index2.html
+++ b/app/views/Application/index2.html
@@ -35,7 +35,27 @@
     });
 
 </script>
+<div>
 
+    <a href="http://www.xiti.com/xiti.asp?s=508921" title="WebAnalytics" target="_top">
+    <script type="text/javascript">
+    <!--
+    Xt_param = 's=508921&p=homePage';
+    try {Xt_r = top.document.referrer;}
+    catch(e) {Xt_r = document.referrer; }
+    Xt_h = new Date();
+    Xt_i = '<img width="80" height="15" border="0" alt="" ';
+    Xt_i += 'src="http://logv17.xiti.com/g.xiti?'+Xt_param;
+    Xt_i += '&hl='+Xt_h.getHours()+'x'+Xt_h.getMinutes()+'x'+Xt_h.getSeconds();
+    if(parseFloat(navigator.appVersion)>=4)
+    {Xt_s=screen;Xt_i+='&r='+Xt_s.width+'x'+Xt_s.height+'x'+Xt_s.pixelDepth+'x'+Xt_s.colorDepth;}
+    document.write(Xt_i+'&ref='+Xt_r.replace(/[<>"]/g, '').replace(/&/g, '$')+'" title="Internet Audience">');
+    //-->
+    </script>
+    <noscript>
+    Mesure d'audience ROI statistique webanalytics par <img width="80" height="15" src="http://logv17.xiti.com/g.xiti?s=508921&p=homepage" alt="WebAnalytics" />
+    </noscript></a>
+</div>
 
 <div class="container">
     <div class="page-header  Kaffeesatz">
@@ -168,6 +188,7 @@
 
     </script>
 </div>
+
 
 
 
