--- a/app/views/Application/listArticlesFromLblTag.html
+++ b/app/views/Application/listArticlesFromLblTag.html
@@ -1,6 +1,8 @@
 <html>
 <head>
     <link rel="stylesheet/less" type="text/css" href="@{'/public/stylesheets/bootstrap.less'}"/>
+    <link rel="stylesheet" type="text/css"
+          href="@{'/public/javascripts/jquery-ui-1.8.18.custom/css/smoothness/jquery-ui-1.8.18.custom.css'}"/>
 </head>
 <body>
 <div class="container">
