--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,27 +1,22 @@
-
-
 <html>
-    <head>
-        <title>Gplus Statistiques</title>
+<head>
+    <title>Gplus Statistiques</title>
 
 
+    <link rel="stylesheet/less" type="text/css" href="@{'/public/stylesheets/bootstrap.less'}"/>
 
 
+    <script src="@{'/public/javascripts/less-1.3.0.min.js'}" type="text/javascript"></script>
+    <script src="@{'/public/javascripts/jquery-1.7.1.min.js'}" type="text/javascript"></script>
+    <script src="@{'/public/javascripts/jquery-ui-1.8.18.custom/js/jquery-ui-1.8.18.custom.min.js'}"
+            type="text/javascript"></script>
+    <script src="@{'/public/javascripts/bootstrap-tab.js'}" type="text/javascript"></script>
+    <script src="@{'/public/javascripts/tagcanvas.js'}" type="text/javascript"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <!---->
 
-
-        <link rel="stylesheet/less" type="text/css" href="@{'/public/stylesheets/bootstrap.less'}" />
-
-
-        <script src="@{'/public/javascripts/less-1.3.0.min.js'}" type="text/javascript"  ></script>
-        <script src="@{'/public/javascripts/jquery-1.7.1.min.js'}" type="text/javascript"  ></script>
-        <script src="@{'/public/javascripts/jquery-ui-1.8.18.custom/js/jquery-ui-1.8.18.custom.min.js'}" type="text/javascript"  ></script>
-        <script src="@{'/public/javascripts/bootstrap-tab.js'}" type="text/javascript"  ></script>
-        <script src="@{'/public/javascripts/tagcanvas.js'}" type="text/javascript" ></script >
-         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-         <link rel="stylesheet"  type="text/css" href="@{'/public/javascripts/jquery-ui-1.8.18.custom/css/smoothness/jquery-ui-1.8.18.custom.css'}" />
-
-    </head>
-    <body>
-        #{doLayout /}
-    </body>
+</head>
+<body>
+#{doLayout /}
+</body>
 </html>
